[gd_scene load_steps=10 format=3 uid="uid://bk5as5rvn577a"]

[ext_resource type="Script" uid="uid://oq0tva61mwte" path="res://zPLAN_B/core/score_press_text.gd" id="1_ol8gf"]
[ext_resource type="FontFile" uid="uid://dtbm3kmdmlhtd" path="res://assets/fonts/EricaOne-Regular.ttf" id="1_ut7dt"]

[sub_resource type="Gradient" id="Gradient_ol8gf"]
offsets = PackedFloat32Array(0, 0.281046, 0.496732, 0.712418, 0.928105)
colors = PackedColorArray(0, 0.834722, 0.990806, 1, 0.868626, 0.4608, 0.811474, 1, 1, 1, 1, 1, 0.922684, 0.6544, 0.892435, 1, 0.329928, 0.833732, 0.946321, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vi2f2"]
gradient = SubResource("Gradient_ol8gf")

[sub_resource type="Gradient" id="Gradient_vi2f2"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_utplp"]
gradient = SubResource("Gradient_vi2f2")

[sub_resource type="Animation" id="Animation_vi2f2"]
resource_name = "fall"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScoreLevelText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScoreLevelText:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-107, 10), Vector2(-107, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_utplp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScoreLevelText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScoreLevelText:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-107, 10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f086e"]
_data = {
&"RESET": SubResource("Animation_utplp"),
&"fall": SubResource("Animation_vi2f2")
}

[node name="ScorePressText" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00579, 1.03832)
script = ExtResource("1_ol8gf")

[node name="ScoreLevelText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -107.0
offset_top = 10.0
offset_right = 123.0
offset_bottom = 87.0
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.31802, 0.31802, 0.31802, 1)
theme_override_constants/outline_size = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_separation = 0
theme_override_fonts/normal_font = ExtResource("1_ut7dt")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]OKAY"
fit_content = true

[node name="TRANS_LIGHT" type="PointLight2D" parent="ScoreLevelText"]
position = Vector2(108.988, 31.4129)
scale = Vector2(1, 54.7709)
blend_mode = 2
texture = SubResource("GradientTexture1D_vi2f2")

[node name="Shine_Light" type="PointLight2D" parent="ScoreLevelText"]
position = Vector2(111.971, 33.339)
rotation = -0.404202
scale = Vector2(1.45781, 32.876)
texture = SubResource("GradientTexture1D_utplp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f086e")
}
autoplay = "fall"
